--- a/website/etc/.htaccess
+++ b/website/etc/.htaccess
@@ -494,8 +494,8 @@ RedirectMatch 301 /mooc-GS-mediatoolkit https://gchumanrights.org/education/e-le
 RedirectMatch 301 /mooc-ungs-children https://gchumanrights.org/education/e-learning/moocs/children-deprived-of-liberty-learning-from-the-un-global-study/about.html
 #####RedirectMatch 301 /mooc-ungs https://gchumanrights.org/education/e-learning/moocs/children-deprived-of-liberty-learning-from-the-un-global-study/about.html
 
-RedirectMatch 301 /mooc-pphr https://gchumanrights.org/education/e-learning/moocs/promoting-and-protecting-human-rights-a-global-overview/about.html
-RedirectMatch 301 /pphr https://gchumanrights.org/education/e-learning/moocs/promoting-and-protecting-human-rights-a-global-overview/about.html
+RedirectMatch 301 ^/mooc-pphr(.*)$ https://gchumanrights.org/education/e-learning/moocs/promoting-and-protecting-human-rights-a-global-overview/about.html
+RedirectMatch 301 ^/pphr(.*)$  https://gchumanrights.org/education/e-learning/moocs/promoting-and-protecting-human-rights-a-global-overview/about.html
 
 Redirect 301 /press-release-ema https://gchumanrights.org/news-events/latest-news/news-detail-page/ema-call-for-applications-for-the-academic-year-2020-2021.html
 Redirect 301 /covid-19 https://gchumanrights.org/about-us/eiuc-global-campus/covid-19.html
